test/src/e2e_vm_tests/test_programs/should_fail/unify_structural_identity/src/lib_a.sw
library;

pub enum E {
    X: u8,
}

pub struct S {
    pub x: u8,
}
